[package]
name = "border_security_plugin"
version = "0.1.0"
edition = "2021"
authors = ["ActuallyAdequate <actuallyadequate@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "actuallyadequate.com"
description = "A Gain Delay Plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
array-init = "2.1.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { path="../nih-plug/", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { path="../nih-plug/nih_plug_vizia/"}
widgets ={path="../widgets/"}
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
